--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ nav {
     display: flex;
     height: 5rem;
     background: rgb(34,193,195);
-    background: linear-gradient(45deg, --secondary-accent, --primary-accent); 
+    background: linear-gradient(45deg, --secondary-accent, --primary-accent);
+    width: 100%;
 }
 
