--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    padding:0;
+    margin:0;
 }
 
 /* Composition */
@@ -16,12 +18,16 @@ nav a + a {
 }
 
 /* Utility */
-.text-14px {
-    font-size: 30px;
+.text-28px {
+    font-size: 28px;
 }
 
 .text-white {
     color: white;
+}
+
+.text-bold {
+    font-weight: bold;
 }
 
 /* Block */
