--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,11 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    padding:0;
-    margin:0;
+    height: 100%;
 }
 
 /* Composition */
-nav a + a {
+nav * + a {
     margin-right: 3rem;
 }
 
