--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,4 @@
-$primary: #fff591;
-$primary-accent: #ff8a5c;
-$secondary: #f5587b;
-$secondary-accent: #e41749;
+@use 'colours';
 
 * {
     margin: 0;
@@ -40,7 +37,7 @@ nav {
     float: left;
     display: block;
     height: 5rem;
-    background: linear-gradient(45deg, $secondary-accent, $primary-accent);
+    background: linear-gradient(45deg, colours.$secondary-accent, colours.$primary-accent);
     width: 100%;
 }
 
@@ -54,11 +51,12 @@ a:visited{
 
 .make-it-scroll {
     height: 500px;
-    background: var(--primary);
+    background: colours.$primary;
 }
 
 .home {
-    
+    height: 100%;
+    background-image: url('./assets/bibimbap.png');
 }
 
 /* Exception */
