--- a/styles.scss
+++ b/styles.scss
@@ -35,6 +35,7 @@ nav a:first-child{
 /* Block */
 nav {
     position: sticky;
+    top: 0;
     height: 5rem;
     background: linear-gradient(45deg, colours.$secondary-accent, colours.$primary-accent);
     width: 100%;
