--- a/styles.scss
+++ b/styles.scss
@@ -55,8 +55,8 @@ a {
     background: colours.$primary;
 }
 
-.home {
-    height: 100%;
+.section {
+    height: 100vh;
     background-image: url('./assets/bibimbap.png');
 }
 
