--- a/styles.scss
+++ b/styles.scss
@@ -61,7 +61,7 @@ a {
 }
 
 .home {
-    background-color: colours.$secondary;
+    background-image: url(assets/bibimbap.png);
 }
 
 /* Exception */
