--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ a:visited {
 }
 
 .home {
-  background-image: url(assets/bibimbap.png);
+  background-image: url("assets/bibimbap.png");
 }
 
 /* Exception */
