--- a/styles.scss
+++ b/styles.scss
@@ -61,7 +61,7 @@ a {
 }
 
 .home {
-    background-image: url(assets/bibimbap.png);
+    background-image: url('assets/bibimbap.png');
 }
 
 /* Exception */
