--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 @use 'colours';
+@use 'constants';
 
 * {
     margin: 0;
@@ -37,7 +38,7 @@ nav a:first-child{
 nav {
     position: sticky;
     top: 0;
-    height: 5rem;
+    height: constants.$nav-bar-height;
     background: linear-gradient(45deg, colours.$secondary-accent, colours.$primary-accent);
     width: 100%;
 }
@@ -60,6 +61,7 @@ section {
     height: 100vh;
 
     #home {
+        height: calc(100vh - constants.$nav-bar-height);
         background-image: url('assets/bibimbap.png');
     }
 }
