--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Wix+Madefor+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Wix+Madefor+Display&family=Wix+Madefor+Text&display=swap");
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Wix Madefor Text", sans-serif;
   height: 100%;
   scroll-behavior: smooth;
 }
@@ -16,6 +18,11 @@ nav a + a {
 
 nav a:first-child {
   margin-right: auto;
+  margin-left: 1rem;
+}
+
+nav a:last-child {
+  margin-right: 1rem;
 }
 
 /* Utility */
@@ -31,10 +38,26 @@ nav a:first-child {
   font-weight: bold;
 }
 
+.display-flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.display-flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 /* Block */
+h1 {
+  font-family: "Wix Madefor Display", sans-serif;
+}
+
 nav {
   position: sticky;
   top: 0;
+  display: flex;
+  align-items: center;
   height: 5rem;
   background: linear-gradient(45deg, #e41749, #ff8a5c);
   width: 100%;
@@ -42,6 +65,7 @@ nav {
 
 a {
   text-decoration: none;
+  color: white;
 }
 a:visited {
   color: white;
@@ -56,9 +80,20 @@ section {
   display: flex;
   height: 100vh;
 }
-section #home {
+
+.home {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   height: calc(100vh - 5rem);
   background-image: url("assets/bibimbap.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: cover;
+}
+
+.recipe-box {
+  width: 100rem;
 }
 
 /* Exception */
