WIP making recipes show/disappear

--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,16 @@ nav a:last-child {
 }
 
 /* Utility */
-.text-28px {
+.text-size-28px {
   font-size: 28px;
 }
 
-.text-7rem {
+.text-size-7rem {
   font-size: 7rem;
+}
+
+.text-size-18px {
+  font-size: 18px;
 }
 
 .text-white {
@@ -55,13 +59,14 @@ nav a:last-child {
 }
 
 .hover-up:hover {
-  margin-top: -2;
+  margin-top: -2rem;
 }
 
 /* Block */
 h1 {
   font-family: "Wix Madefor Display", sans-serif;
   padding-top: 6rem;
+  margin-bottom: 1rem;
   font-style: italic;
   font-size: 5rem;
   font-weight: bold;
@@ -99,8 +104,10 @@ a:visited {
 
 section {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   margin: 0 1rem;
+  gap: 1rem;
 }
 
 .home {
@@ -114,12 +121,46 @@ section {
   padding-left: 2rem;
 }
 
-.recipe-box {
+.recipe-box, .recipe-box-with-border {
   display: flex;
   flex-direction: column;
-  width: 18rem;
+  width: 24rem;
   color: white;
   gap: 10px;
+}
+
+.recipe-box-with-border {
+  border: solid 4px #e41749;
+  padding: 8px;
+  color: black;
+}
+
+.recipe-card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+img {
+  width: 24rem;
+  height: 24rem;
+  object-fit: cover;
+  border-radius: 2px;
+}
+
+.image-button {
+  border: none;
+  background-color: transparent;
+  margin-top: auto;
+}
+
+.image-button img {
+  width: 24px;
+  height: 24px;
+}
+
+.recipe-description {
+  font-size: 18px;
 }
 
 /* Exception */
