--- a/colours.scss
+++ b/colours.scss
@@ -2,3 +2,6 @@ $primary: #fff591;
 $primary-accent: #ff8a5c;
 $secondary: #f5587b;
 $secondary-accent: #e41749;
+
+$light-blue: #14E4F7;
+$blue-accent: #4EA1E1;
