--- a/styles.scss
+++ b/styles.scss
@@ -56,6 +56,10 @@ nav a:last-child{
     margin-left: 2rem;
 }
 
+.padding-top-10rem {
+    padding-top: 10rem;
+}
+
 .hover-up {
     transition: margin 0.2s ease-in-out;
 }
@@ -110,7 +114,7 @@ section {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    margin: 0 1rem;
+    padding: 0 1rem;
     gap: 1rem;
 }
 
@@ -119,7 +123,7 @@ section {
     flex-direction: column;
 
     height: calc(100vh - constants.$nav-bar-height);
-    background-image: url('assets/bibimbap.png');
+    background-image: url('assets/bibimbap-3.png');
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
@@ -130,6 +134,7 @@ section {
 .recipe-box {
     display: flex;
     flex-direction: column;
+    align-self: start;
 
     width: 24rem;
     color: white;
@@ -138,10 +143,17 @@ section {
 
 .recipe-box-with-border {
     @extend .recipe-box;
+    justify-content: center;
     border: solid 4px colours.$secondary-accent;
     padding: 8px;
+    min-height: 34rem;
 
     color: black;
+    overflow: hidden;
+}
+
+.recipe-box-with-border p, h2 {
+    padding: 0 1rem 0.5rem;
 }
 
 .recipe-card-container {
@@ -162,6 +174,7 @@ img {
     border: none;
     background-color: transparent;
     margin-top: auto;
+    align-self: center;
 }
 
 .image-button img {
@@ -172,6 +185,14 @@ img {
 .recipe-description {
     font-size: 18px;
 }
-/* Exception */
 
+#lunch {
+    background: linear-gradient(white, colours.$primary, colours.$primary-accent)
+}
+
+#lunch h1 {
+    color: colours.$secondary;
+}
+
+/* Exception */
 
