--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ nav a:last-child {
   font-weight: bold;
 }
 
+.text-outlign {
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+}
+
 .margin-0 {
   margin: 0;
 }
@@ -94,11 +98,17 @@ nav {
 }
 
 a {
+  box-shadow: inset 0 0 0 0 white;
+  transition: box-shadow 0.3s ease-in-out;
   text-decoration: none;
   color: white;
+  width: fit-content;
 }
 a:visited {
   color: white;
+}
+a:hover {
+  box-shadow: inset 100px 0 0 0 #14E4F7;
 }
 
 .make-it-scroll {
@@ -139,6 +149,7 @@ section {
   border: solid 4px #e41749;
   padding: 8px;
   min-height: 34rem;
+  background-color: white;
   color: black;
   overflow: hidden;
 }
@@ -161,10 +172,18 @@ img {
 }
 
 .image-button {
-  border: none;
-  background-color: transparent;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+  border-color: transparent;
+  box-shadow: 0;
+  background-color: white;
   margin-top: auto;
   align-self: center;
+  transition: background-color 0.3s ease-in-out;
+}
+.image-button:hover {
+  background-color: #14E4F7;
 }
 
 .image-button img {
