--- a/styles.scss
+++ b/styles.scss
@@ -48,6 +48,10 @@ nav a:last-child{
     font-weight: bold;
 }
 
+.text-outlign {
+    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+}
+
 .margin-0 {
     margin: 0;
 }
@@ -97,11 +101,18 @@ nav {
 }
 
 a {
+    box-shadow: inset 0 0 0 0 white;
+    transition: box-shadow .3s ease-in-out;
     text-decoration: none;
     color: white;
+    width: fit-content;
 
     &:visited{
         color:white;
+    }
+
+    &:hover{
+        box-shadow: inset 100px 0 0 0 colours.$light-blue;
     }
 }
 
@@ -147,6 +158,7 @@ section {
     border: solid 4px colours.$secondary-accent;
     padding: 8px;
     min-height: 34rem;
+    background-color: white;
 
     color: black;
     overflow: hidden;
@@ -171,10 +183,20 @@ img {
 }
 
 .image-button {
-    border: none;
-    background-color: transparent;
+    display: flex;
+    align-items: center;
+    border-radius: 50%;
+    border-color: transparent;
+    box-shadow: 0;
+    background-color: white;
     margin-top: auto;
     align-self: center;
+
+    transition: background-color 0.3s  ease-in-out;
+
+    &:hover {
+        background-color: colours.$light-blue;
+    }
 }
 
 .image-button img {
@@ -187,7 +209,7 @@ img {
 }
 
 #lunch {
-    background: linear-gradient(white, colours.$primary, colours.$primary-accent)
+    background: linear-gradient(white, colours.$primary, colours.$primary-accent);
 }
 
 #lunch h1 {
