--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,12 @@
 @use 'colours';
 @use 'constants';
 @use 'fonts';
+@use "sass:math";
+
+@function pixelsToRem($sizeInPixels) {
+    $remValue: math.div($sizeInPixels,16) + rem;	
+    @return $remValue;
+}
 
 * {
     margin: 0;
@@ -11,6 +17,10 @@ body {
     font-family: fonts.$wix-text;
     height: 100%;
     scroll-behavior: smooth;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 /* Composition */
@@ -29,7 +39,7 @@ nav a:last-child{
 
 /* Utility */
 .text-size-28px {
-    font-size: 28px;
+    font-size: pixelsToRem(28);
 }
 
 .text-size-7rem {
@@ -37,19 +47,23 @@ nav a:last-child{
 }
 
 .text-size-18px {
-    font-size: 18px;
+    font-size: pixelsToRem(18);
 }
 
 .text-white {
     color: white;
 }
 
+.text-blue-dark {
+    color: colours.$blue-dark;
+}
+
 .text-bold {
     font-weight: bold;
 }
 
-.text-outlign {
-    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+.text-align-centre {
+    text-align: center;
 }
 
 .margin-0 {
@@ -60,8 +74,12 @@ nav a:last-child{
     margin-left: 2rem;
 }
 
-.padding-top-10rem {
-    padding-top: 10rem;
+.margin-top-0 {
+    margin-top: 0;
+}
+
+.padding-1rem {
+    padding: 1rem;
 }
 
 .hover-up {
@@ -72,10 +90,30 @@ nav a:last-child{
     margin-top: -2rem;
 }
 
+.width-fit-content {
+    width: fit-content;
+}
+
+.background-colour-white {
+    background-color: white;
+}
+
+.display-flex-column-centre {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.height-6rem-width-30rem {
+    height: 6rem;
+    width: 30rem;
+}
+
 /* Block */
 h1 {
     font-family: fonts.$wix-display;
-    padding-top: 6rem;
+    margin-top: 6rem;
     margin-bottom: 1rem;
 
     font-style: italic;
@@ -97,7 +135,7 @@ nav {
     height: constants.$nav-bar-height;
     background: linear-gradient(45deg, colours.$secondary-accent, colours.$primary-accent);
     width: 100%;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 pixelsToRem(10) pixelsToRem(10);
 }
 
 a {
@@ -112,31 +150,31 @@ a {
     }
 
     &:hover{
-        box-shadow: inset 100px 0 0 0 colours.$light-blue;
+        box-shadow: inset pixelsToRem(100) 0 0 0 colours.$light-blue;
     }
 }
 
 .make-it-scroll {
-    height: 500px;
+    height: pixelsToRem(500);
     background-color: colours.$primary;
 }
 
 section {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     padding: 0 1rem;
     gap: 1rem;
 }
 
 .home {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     height: calc(100vh - constants.$nav-bar-height);
     background-image: url('assets/bibimbap-3.png');
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: center;
     background-size: cover;
 
     padding-left: 2rem;
@@ -149,16 +187,17 @@ section {
 
     width: 24rem;
     color: white;
-    gap: 10px;
+    gap: pixelsToRem(10);
 }
 
 .recipe-box-with-border {
     @extend .recipe-box;
     justify-content: center;
-    border: solid 4px colours.$secondary-accent;
-    padding: 8px;
+    border: solid pixelsToRem(4) colours.$secondary-accent;
+    padding: pixelsToRem(8);
     min-height: 34rem;
     background-color: white;
+    margin-bottom: 1rem;
 
     color: black;
     overflow: hidden;
@@ -172,6 +211,7 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 img {
@@ -179,7 +219,7 @@ img {
     height: 24rem;
     object-fit: cover;
 
-    border-radius: 2px;
+    border-radius: pixelsToRem(2);
 }
 
 .image-button {
@@ -200,12 +240,12 @@ img {
 }
 
 .image-button img {
-    width: 24px;
-    height: 24px;
+    width: pixelsToRem(24);
+    height: pixelsToRem(24);
 }
 
 .recipe-description {
-    font-size: 18px;
+    font-size: pixelsToRem(18);
 }
 
 #lunch {
@@ -214,6 +254,17 @@ img {
 
 #lunch h1 {
     color: colours.$secondary;
+}
+
+#dinner {
+    background: linear-gradient(colours.$primary-accent, colours.$secondary, colours.$secondary-accent);
+    min-height: 100vh;
+}
+
+#dinner .recipe-box-with-border {
+    border-color: white;
+    background-color: colours.$secondary;
+    color: white;
 }
 
 /* Exception */
